--- a/style.css
+++ b/style.css
@@ -1,74 +1,135 @@
 *{
-	margin:0;
-	padding: 0;
-	list-style: none;
-	text-decoration: none;
-}
-
-body{
-
+  margin:0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
 header{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	min-width: 600px;
-	padding: 40px;
-	background-color: #333333;
-	color: white;
-	display: flex;
-	flex-direction: row;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: #333333;
+  color: white;
+  display: flex;
+  flex-direction: row;
 }
 
 header h1{
-	margin-right: auto;
+  position: absolute;
+  top: 1rem;
+  left: 3rem;
+  margin-right: auto;
 }
+
+@media only screen and (max-width: 640px) {
+
+  header {
+    display: block;
+  }
+
+  header h1{
+    text-align: center;
+  }
+
+}
+
+
+
 
 nav {
-	margin-right: 40px;
+
 }
 
-#MenuButton{
+nav a{
+  color: white;
+}
+
+#MenuButton {
   display: none;
+}
+
+#MenuButton li{
+  text-align: center;
 }
 
 #MenuList {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-right: 2.5rem;
 }
 
 #MenuList li{
-	margin: 0 1rem;
+  margin: 0 .5rem;
 }
 
 #MenuList a{
-	color: white;
+
+}
+
+@media only screen and (max-width: 640px) {
+
+  #MenuButton {
+    display: block;
+    position: fixed;
+    top: 7rem;
+    right: 0;
+  }
+
+  #MenuButton a{
+    display: block;
+    width: 100%;
+    padding: 12px 0 12px 0;
+    background: red;
+  }
+
+  #MenuList {
+    display: none;
+    flex-direction: column;
+    margin-right: 0;
+  }
+
+  #MenuList li{
+    width: 100%;
+    margin: 0;
+  }
+
+  #MenuList a{
+    display: block;
+    padding: 12px 0 12px 0;
+    color: #FFF;
+    text-align: center;
+    border-right:1px solid silver;
+    background-color: #666;
+  }
+
 }
 
 #wrapper {
-	margin: auto;
   margin-top: 160px;
-	max-width: 960px;
-	display: flex;
-	flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 960px;
+  display: flex;
+  flex-direction: column;
 }
 
 section {
-	padding: 40px;
-	height: 500px;
- 	background-color: #dddddd;
-	margin-bottom: 40px;
+  padding: 40px;
+  height: 500px;
+  background-color: #dddddd;
+  margin-bottom: 40px;
 }
 
 section h1{
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 footer{
-	padding: 40px;
-	background-color: #333333;
-	color: white;
+  padding: 40px;
+  background-color: #333333;
+  color: white;
 }
