--- a/style.css
+++ b/style.css
@@ -10,106 +10,117 @@ header{
   top: 0;
   left: 0;
   width: 100%;
-  height: 5rem;
-  background-color: #333333;
+  height: 4rem;
+  background-color: #333;
   color: white;
-  display: flex;
-  flex-direction: row;
 }
 
 header h1{
   position: absolute;
   top: 1rem;
-  left: 3rem;
-  margin-right: auto;
+  left: 2rem;
+  font-size: 1.5rem;
 }
 
-@media only screen and (max-width: 640px) {
-
-  header {
-    display: block;
-  }
-
-  header h1{
-    text-align: center;
-  }
-
-}
-
-
-
-
-nav {
-
-}
-
-nav a{
-  color: white;
-}
-
-#MenuButton {
+#MenuButton{
   display: none;
 }
 
-#MenuButton li{
-  text-align: center;
+#MenuList{
+  position: absolute;
+  top: 1rem;
+  right: 2rem;
+  width: auto;
 }
 
-#MenuList {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-right: 2.5rem;
-}
-
-#MenuList li{
-  margin: 0 .5rem;
-}
-
-#MenuList a{
-
-}
-
-@media only screen and (max-width: 640px) {
-
-  #MenuButton {
-    display: block;
-    position: fixed;
-    top: 7rem;
-    right: 0;
+  #MenuList ul {
+    display: flex;
+    flex-direction:row;
   }
 
-  #MenuButton a{
-    display: block;
-    width: 100%;
-    padding: 12px 0 12px 0;
-    background: red;
+  #MenuList li {
+    width: auto;
+    padding: 0 1em;
+    border-bottom: none;
   }
 
-  #MenuList {
+  #MenuList a {
+    color: white;
+  }
+
+@media only screen and (max-width: 768px) {
+
+  #MenuButton{
+    display: block;
+    position: absolute;
+    top: 1.2rem;
+    right: 2rem;
+  }
+
+    .MenuButtonLine {
+      position: relative;
+      display: block;
+      height: 2px;
+      width: 30px;
+      background: #BBB;
+      transition: ease .5s;
+    }
+
+    .MenuButtonLine:nth-child(1) {
+        top: 0;
+    }
+    .MenuButtonLine:nth-child(2) {
+        margin: 8px 0;
+    }
+    .MenuButtonLine:nth-child(3) {
+        top: 0;
+    }
+
+    #MenuButton.open .MenuButtonLine:nth-child(1) {
+      top: 10px;
+      transform: rotate(45deg);
+    }
+
+    #MenuButton.open .MenuButtonLine:nth-child(2) {
+      transform: translateY(-50%);
+      opacity: 0;
+    }
+
+    #MenuButton.open .MenuButtonLine:nth-child(3) {
+      top: -10px;
+      transform: rotate(-45deg);
+    }
+
+  #MenuList {  /* Default Display None */
     display: none;
-    flex-direction: column;
-    margin-right: 0;
-  }
 
-  #MenuList li{
+    position: absolute;
+    top: 4rem;
+    left: 0;
     width: 100%;
-    margin: 0;
+    background-color: rgba(64,64,64,0.8);
   }
 
-  #MenuList a{
-    display: block;
-    padding: 12px 0 12px 0;
-    color: #FFF;
-    text-align: center;
-    border-right:1px solid silver;
-    background-color: #666;
-  }
+    #MenuList ul {
+      flex-direction: column;
+    }
+
+    #MenuList li{
+      width: 100%;
+      padding: 0;
+      border-bottom: 1px solid #CCC;
+    }
+
+    #MenuList a{
+      display: block;
+      width: 100%;
+      padding: 0.8rem 2rem;
+    }
 
 }
 
 #wrapper {
-  margin-top: 160px;
+  margin-top: 6rem;
   margin-left: auto;
   margin-right: auto;
   max-width: 960px;
